[package]
name = "my_project"
version = "0.1.0"
authors = ["Kevin Wang <kwangsan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
num_cpus = "1.13.0"
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
egg-mode = { version = "0.15", features = [
  "rustls_webpki"
], default-features = false }
sysinfo = "0.15.3"

[source.crates-io]
replace-with = 'vendored-sources'

[source.vendored-sources]
directory = '/usr/src/app/vendor'

[[bin]]
name = "my_project"
path = "src/main.rs"
